Estimated Game also works

--- a/notebooks/exp1-weights.ipynb
+++ b/notebooks/exp1-weights.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "         9.88131292e-324]]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,17 +115,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GameFreshEstimate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m num_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;66;03m# 10 per iteration\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m gfe \u001b[38;5;241m=\u001b[39m GameFreshEstimate(gammas\u001b[38;5;241m=\u001b[39mgammas, taus\u001b[38;5;241m=\u001b[39mtaus, num_samples\u001b[38;5;241m=\u001b[39mnum_samples,  dist \u001b[38;5;241m=\u001b[39m tg)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GameFreshEstimate' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "num_samples = 10 # 100 per iteration\n",
-    "gtm = GameFreshEstimate(gammas=gammas, taus=taus, dist = tg, num_samples=num_samples)"
+    "num_samples = 10 # 10 per iteration\n",
+    "gfe = GameFreshEstimate(gammas=gammas, taus=taus, num_samples=num_samples,  dist = tg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +147,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m p_b1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.1\u001b[39m])\n\u001b[1;32m      4\u001b[0m p_b2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.1\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m b1_rec, b2_rec \u001b[38;5;241m=\u001b[39m gtm\u001b[38;5;241m.\u001b[39mrun_hedge(T\u001b[38;5;241m=\u001b[39mT, p_b1 \u001b[38;5;241m=\u001b[39m p_b1, p_b2 \u001b[38;5;241m=\u001b[39m p_b2, eta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[21], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m p_b1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.1\u001b[39m])\n\u001b[1;32m      4\u001b[0m p_b2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0.1\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.3\u001b[39m, \u001b[38;5;241m0.1\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m b1_rec, b2_rec \u001b[38;5;241m=\u001b[39m gfe\u001b[38;5;241m.\u001b[39mrun_hedge(T\u001b[38;5;241m=\u001b[39mT, p_b1 \u001b[38;5;241m=\u001b[39m p_b1, p_b2 \u001b[38;5;241m=\u001b[39m p_b2, eta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n",
       "File \u001b[0;32m~/Documents/Research/BankGame/bankgame/notebooks/../game/Bankgames.py:62\u001b[0m, in \u001b[0;36mGameFreshEstimate.run_hedge\u001b[0;34m(self, T, p_b1, p_b2, eta)\u001b[0m\n\u001b[1;32m     60\u001b[0m b2_record \u001b[38;5;241m=\u001b[39m [p_b2]\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(T):\n\u001b[0;32m---> 62\u001b[0m     A_est \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_PayoffMat_est()\n\u001b[1;32m     63\u001b[0m     p_b1, p_b2 \u001b[38;5;241m=\u001b[39m HedgeSimultaneous(p_b1, p_b2, eta, A_est)\n\u001b[1;32m     64\u001b[0m     b1_record\u001b[38;5;241m.\u001b[39mappend(p_b1)\n",
       "File \u001b[0;32m~/Documents/Research/BankGame/bankgame/notebooks/../game/Bankgames.py:44\u001b[0m, in \u001b[0;36mGameFreshEstimate.get_PayoffMat_est\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_PayoffMat_est\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 44\u001b[0m     y_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdist\u001b[38;5;241m.\u001b[39mget_samples(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdist\u001b[38;5;241m.\u001b[39mget_samples(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_samples))\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m matrix_from_samples(y_samples\u001b[38;5;241m=\u001b[39my_samples, gammas\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgammas, taus\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtaus)\n",
       "File \u001b[0;32m~/Documents/Research/BankGame/bankgame/notebooks/../game/distributions.py:41\u001b[0m, in \u001b[0;36mTruncatedGaussian.get_samples\u001b[0;34m(self, num_samples)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_samples\u001b[39m(\u001b[38;5;28mself\u001b[39m, num_samples: \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m---> 41\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m truncnorm\u001b[38;5;241m.\u001b[39mrvs(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39ma_scaled,\n\u001b[1;32m     42\u001b[0m                          \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mb_scaled,\n\u001b[1;32m     43\u001b[0m                          loc\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmu,\n\u001b[1;32m     44\u001b[0m                          scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msigma,\n\u001b[1;32m     45\u001b[0m                          size\u001b[38;5;241m=\u001b[39mnum_samples)\n",
@@ -153,7 +165,7 @@
     "p_b1 = np.array([0.1, 0.5, 0.3, 0.1])\n",
     "p_b2 = np.array([0.1, 0.5, 0.3, 0.1])\n",
     "\n",
-    "b1_rec, b2_rec = gtm.run_hedge(T=T, p_b1 = p_b1, p_b2 = p_b2, eta = 1)"
+    "b1_rec, b2_rec = gfe.run_hedge(T=T, p_b1 = p_b1, p_b2 = p_b2, eta = 1)"
    ]
   },
   {
