--- a/notebooks/Game_2gammas.ipynb
+++ b/notebooks/Game_2gammas.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f24eb0a7",
+   "id": "2bab582d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "12801956",
+   "execution_count": 6,
+   "id": "8b31ea1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,15 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "8dd8b9ef",
+   "execution_count": 7,
+   "id": "e7d93dda",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Truncated gaussian\n",
     "tg = TruncatedGaussian()\n",
-    "\n",
-    "# gammas = [0.5, 0.6]\n",
+    "gammas = [0.5, 0.6]\n",
     "\n",
     "taus = [1/(2+gamma) for gamma in gammas]\n",
     "\n",
@@ -46,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "15ad7a3c",
+   "execution_count": 8,
+   "id": "edbaf550",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +55,7 @@
        "(-0.23058161945446387, -0.25748629749030433)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3d7c7622",
+   "execution_count": 9,
+   "id": "3a38b67f",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +76,7 @@
        "[[[0, 0, 1, 0], [0, 0, 1, 0]]]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "02587cb0",
+   "execution_count": 10,
+   "id": "50ebcad3",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +97,7 @@
        "[(array([0., 0., 1., 0.]), array([0., 0., 1., 0.]))]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +108,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "fd8279c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = 10000\n",
+    "p_b1 = np.array([0., 0.4, 0.7, 0.])\n",
+    "p_b2 = np.array([0., 0.5, 0.3, 0.])\n",
+    "eta = 0.1\n",
+    "\n",
+    "p_b1, p_b2, _, _ = game_tg.run_hedge(T=T, p_b1 = p_b1, p_b2 = p_b2, eta=eta)\n",
+    "print(p_b1[-1], p_b2[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d6ae491c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([0., 0., 1., 0.]), array([0., 0., 1., 0.]))]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_tg.get_closest_elementwise_NE(p_b1[-1], p_b2[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "id": "aa0e19f7",
+   "id": "be5d065a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +154,13 @@
     "gammas = [0.5, 0.6]\n",
     "taus = [1/(2+gamma) for gamma in gammas]\n",
     "puf = PiecewiseUniform()\n",
-    "\n",
     "game_puf = GameTrueMatrix2by2(gammas = gammas, taus = taus, dist = puf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8f7268e4",
+   "id": "f4733c9b",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "16d566a3",
+   "id": "0a773ca2",
    "metadata": {},
    "outputs": [
     {
@@ -172,23 +207,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "afb4067c",
+   "execution_count": 30,
+   "id": "49405945",
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = 100000\n",
-    "p_b1 = np.array([0., 0.1, 0.9, 0.])\n",
-    "p_b2 = np.array([0., 0.5, 0.3, 0.])\n",
-    "eta = 0.1\n",
+    "T = 10000\n",
+    "\n",
     "\n",
     "p_b1, p_b2, _, _ = game_puf.run_hedge(T=T, p_b1 = p_b1, p_b2 = p_b2, eta=eta)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "e38cfad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.        , 0.00119503, 0.99880497, 0.        ]),\n",
+       " array([0.        , 0.72071293, 0.27928707, 0.        ]))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_b1[-1], p_b2[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "987185e8",
+   "id": "61387301",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9750ea49",
+   "id": "6c6593ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07b5bbd",
+   "id": "0446e4b6",
    "metadata": {},
    "source": [
     "# PLOTS TODO n = 4 actions\n",
@@ -265,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "abf2cdc0",
+   "id": "0fbd5435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da5e5cd",
+   "id": "57143c23",
    "metadata": {},
    "outputs": [],
    "source": []
