--- a/notebooks/Game_2gammas_DynamicsCurves_4epsiloncases.ipynb
+++ b/notebooks/Game_2gammas_DynamicsCurves_4epsiloncases.ipynb
@@ -1249,9 +1249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (bankgame)",
    "language": "python",
-   "name": "python3"
+   "name": "bankgame"
   },
   "language_info": {
    "codemirror_mode": {
