adds n=3 sample dist to NE plot

--- a/notebooks/DistancetoNE_morethan2gammas.ipynb
+++ b/notebooks/DistancetoNE_morethan2gammas.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d2a6389",
+   "id": "73f5bb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f57105de",
+   "id": "7c983f7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "569fbc44",
+   "id": "1a641c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fb90471b",
+   "id": "0a165a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a113fc33",
+   "id": "aeb06c65",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "574441a1",
+   "id": "a8a865d1",
    "metadata": {
     "scrolled": true
    },
@@ -199,13 +199,14 @@
     }
    ],
    "source": [
-    "display(get_significant(gtm.NE_ve)) # just formatting the above better, we have 2 pure symmetric, 2 mixed"
+    "display(get_significant(gtm.NE_ve)) # just formatting the above better, \n",
+    "#we have 2 pure symmetric NE, 3 mixed NE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e7b5ce92",
+   "id": "b272393a",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "889ee5e4",
+   "id": "706fac4f",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "009573f9",
+   "id": "a2262d7a",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "70cc86e3",
+   "id": "a7f5ee93",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a7c430f7",
+   "id": "b1a798c1",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c2e61fec",
+   "id": "b233f16c",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e610f7fd",
+   "id": "8ac6186c",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b393d9c0",
+   "id": "55ce5548",
    "metadata": {},
    "outputs": [],
    "source": []
