adds slurmjob struc for table1

--- a/notebooks/DistancetoNE_morethan2gammas.ipynb
+++ b/notebooks/DistancetoNE_morethan2gammas.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "73f5bb92",
+   "id": "04e826a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c983f7b",
+   "id": "73db1ee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1a641c57",
+   "id": "63f5f72a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     "        return np.round(masked_arr, decimals=decimal_places)  # Round to desired decimal places\n",
     "\n",
     "    formatted_profiles = [\n",
-    "        tuple(process_array(arr) for arr in profile)\n",
+    "        tuple(process_array(arr) for arr intab profile)\n",
     "        for profile in ne_profiles\n",
     "    ]\n",
     "    \n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0a165a33",
+   "id": "9e6b5327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "aeb06c65",
+   "id": "9058f175",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a8a865d1",
+   "id": "2109b50b",
    "metadata": {
     "scrolled": true
    },
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b272393a",
+   "id": "6ff2620d",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "706fac4f",
+   "id": "6bfa1e2b",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a2262d7a",
+   "id": "30b91fa4",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a7f5ee93",
+   "id": "090139b5",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b1a798c1",
+   "id": "79e41a14",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b233f16c",
+   "id": "1981e5bc",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8ac6186c",
+   "id": "845f6943",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ce5548",
+   "id": "7870bbf2",
    "metadata": {},
    "outputs": [],
    "source": []
