--- a/notebooks/Convegence_and_Distance_toNE.ipynb
+++ b/notebooks/Convegence_and_Distance_toNE.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9407ffaa",
+   "id": "f2ced003",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5d92f031",
+   "id": "f96b30cf",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f87a823f",
+   "id": "c552b3c1",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28bb589",
+   "id": "d39a5836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9663d340",
+   "id": "1daed914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
     "    axes[-1].set_xlabel(\"Rounds\")  # Only the last subplot gets the x-label\n",
     "    plt.suptitle(title_prefix, fontsize=14)\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d0321ec5",
+   "id": "07511701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6464ddf7",
+   "id": "7a19d7a9",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae835401",
+   "id": "3b88d23d",
    "metadata": {},
    "source": [
     "## Code below runs hedge on all 3 games\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "fae59a93",
+   "id": "27ed87d5",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ca6daccf",
+   "id": "a01862b3",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "37e02e6d",
+   "id": "e4a51558",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "55988ab7",
+   "id": "c32c611a",
    "metadata": {
     "scrolled": true
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4079920e",
+   "id": "a557f224",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dbefbd7b",
+   "id": "b53f604f",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "44b7f94e",
+   "id": "9bc7909b",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4409711c",
+   "id": "6a565737",
    "metadata": {},
    "source": [
     "## Epsilon_1 < 0, Epsilon_2 < 0  (Case --)\n",
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "159307b3",
+   "id": "d26e79de",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "79ebe0c8",
+   "id": "eb6c7264",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "3c7c430d",
+   "id": "79b766de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "242ef7a1",
+   "id": "850934fd",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8cbd5a6b",
+   "id": "98739ab5",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a4458f73",
+   "id": "f32df4b9",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "d9a138c0",
+   "id": "469fcfe3",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "aec63ffb",
+   "id": "eeb0f54b",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c4d03917",
+   "id": "9ab372ec",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bfbb2c4",
+   "id": "d76f6e54",
    "metadata": {},
    "source": [
     "## Epsilon_1 > 0, Epsilon_2 < 0 (Case +-)\n",
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "55985082",
+   "id": "eb9df172",
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fc8ed90a",
+   "id": "f021be7e",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5787f0a8",
+   "id": "f9338bb9",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0ed0f5a0",
+   "id": "a0da33d1",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e61b5ec1",
+   "id": "a30c7d14",
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0a5d000",
+   "id": "0cec32fc",
    "metadata": {},
    "source": [
     "## Case+- all 3 converge to symmetric pure NE that too tau_h, gamma_l"
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "615b69e9",
+   "id": "3905b77e",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "950ea5bf",
+   "id": "d13fffae",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "03bf743f",
+   "id": "adcb2f90",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11e6daaf",
+   "id": "89da4a27",
    "metadata": {},
    "source": [
     "##  eps_1<0 eps_2>0  (Case -+, )\n",
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "db2b06f1",
+   "id": "a28df0f1",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6ccac7f2",
+   "id": "75085d4f",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "97a67473",
+   "id": "54b60a82",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9538e0df",
+   "id": "986f219e",
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "00e6340c",
+   "id": "ce95b4f9",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3b5e023c",
+   "id": "5c049c61",
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c4f9a977",
+   "id": "52574e37",
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8f4a207e",
+   "id": "69736cb5",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dc094a1",
+   "id": "fbfc1531",
    "metadata": {},
    "outputs": [],
    "source": []
