adds pm instances for more initis

--- a/notebooks/DistancetoNE_morethan2gammas.ipynb
+++ b/notebooks/DistancetoNE_morethan2gammas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "04e826a2",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "id": "b1d1f387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams.update({\n",
+    "    \"pgf.texsystem\": \"pdflatex\",\n",
+    "    'font.family': 'serif',\n",
+    "    'font.size' : 17,                   # Set font size to 11pt\n",
+    "    'axes.labelsize': 20,               # -> axis labels\n",
+    "    'xtick.labelsize':12,\n",
+    "    'ytick.labelsize':12,\n",
+    "    'legend.fontsize': 18,\n",
+    "    'lines.linewidth':2,\n",
+    "    'text.usetex': False,\n",
+    "    'pgf.rcfonts': False,\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "73db1ee2",
    "metadata": {},
    "outputs": [],
@@ -98,7 +119,7 @@
     "        return np.round(masked_arr, decimals=decimal_places)  # Round to desired decimal places\n",
     "\n",
     "    formatted_profiles = [\n",
-    "        tuple(process_array(arr) for arr intab profile)\n",
+    "        tuple(process_array(arr) for arr in tab profile)\n",
     "        for profile in ne_profiles\n",
     "    ]\n",
     "    \n",
