--- a/slurmjobs_2gamma/instances_fordistributions.ipynb
+++ b/slurmjobs_2gamma/instances_fordistributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,40 +11,42 @@
     "import pandas as pd\n",
     "from itertools import product\n",
     "from game.Bankgames import GameTrueMatrix2by2\n",
-    "from game.distributions import TruncatedGaussian, PiecewiseUniform"
+    "from game.distributions import TruncatedGaussian, PiecewiseUniform\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    sign_pair   mu  sigma  gamma_l  gamma_h\n",
-      "0          ++  0.1    0.1      0.1      0.2\n",
-      "1          ++  0.1    0.2      0.2      0.9\n",
-      "2          ++  0.1    0.1      0.2      0.9\n",
-      "3          ++  0.2    0.2      0.2      0.8\n",
-      "4          ++  0.1    0.1      0.1      0.7\n",
-      "..        ...  ...    ...      ...      ...\n",
-      "235        --  0.1    0.4      0.1      0.3\n",
-      "236        --  0.1    0.3      0.1      0.3\n",
-      "237        --  0.6    0.3      0.2      0.9\n",
-      "238        --  0.6    0.2      0.1      0.3\n",
-      "239        --  0.8    0.4      0.8      0.9\n",
+      "   sign_pair   mu  sigma  gamma_l  gamma_h\n",
+      "0         ++  0.1    0.1      0.4      0.8\n",
+      "1         ++  0.3    0.1      0.4      0.8\n",
+      "2         ++  0.2    0.1      0.4      0.8\n",
+      "3         +-  0.4    0.1      0.4      0.8\n",
+      "4         +-  0.2    0.2      0.4      0.8\n",
+      "..       ...  ...    ...      ...      ...\n",
+      "76        --  0.3    0.9      0.4      0.8\n",
+      "77        --  0.3    0.8      0.4      0.8\n",
+      "78        --  0.3    0.7      0.4      0.8\n",
+      "79        --  0.4    0.6      0.4      0.8\n",
+      "80        --  0.9    0.9      0.4      0.8\n",
       "\n",
-      "[240 rows x 5 columns]\n"
+      "[81 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
     "def search_eps_signs():\n",
-    "    gamma_values = [0.1, 0.2, 0.3, 0.7, 0.8, 0.9]\n",
-    "    mu_values = [0.1, 0.2, 0.6, 0.8]\n",
-    "    sigma_values = [0.1, 0.2, 0.3, 0.4]\n",
+    "    gamma_values = [0.4, 0.8]\n",
+    "#     gamma_values = [0.1, 0.2, 0.3, 0.7, 0.8, 0.9]\n",
+    "    mu_values = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
+    "    sigma_values = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "    \n",
     "    data = []\n",
     "    \n",
@@ -71,6 +73,35 @@
     "# Run the search and get the sorted DataFrame\n",
     "df_result = search_eps_signs()\n",
     "print(df_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'--': 75, '++': 3, '+-': 3})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(df_result['sign_pair'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result[df_result['sign_pair'] == '+-'].to_csv(\"tg_pm_instances.csv\", index=False, header=False)"
    ]
   },
   {
