--- a/slurmjobs_2gamma/instances_fordistributions.ipynb
+++ b/slurmjobs_2gamma/instances_fordistributions.ipynb
@@ -17,33 +17,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   sign_pair   mu  sigma  gamma_l  gamma_h\n",
-      "0         ++  0.1    0.1      0.4      0.8\n",
-      "1         ++  0.3    0.1      0.4      0.8\n",
-      "2         ++  0.2    0.1      0.4      0.8\n",
-      "3         +-  0.4    0.1      0.4      0.8\n",
-      "4         +-  0.2    0.2      0.4      0.8\n",
-      "..       ...  ...    ...      ...      ...\n",
-      "76        --  0.3    0.9      0.4      0.8\n",
-      "77        --  0.3    0.8      0.4      0.8\n",
-      "78        --  0.3    0.7      0.4      0.8\n",
-      "79        --  0.4    0.6      0.4      0.8\n",
-      "80        --  0.9    0.9      0.4      0.8\n",
+      "     sign_pair   mu  sigma  gamma_l  gamma_h\n",
+      "0           ++  0.1    0.1      0.1      0.2\n",
+      "1           ++  0.4    0.1      0.1      0.8\n",
+      "2           ++  0.1    0.2      0.1      0.9\n",
+      "3           ++  0.2    0.2      0.2      0.8\n",
+      "4           ++  0.1    0.1      0.1      0.4\n",
+      "...        ...  ...    ...      ...      ...\n",
+      "1210        --  0.3    0.3      0.2      0.5\n",
+      "1211        --  0.3    0.4      0.2      0.5\n",
+      "1212        --  0.3    0.5      0.2      0.5\n",
+      "1213        --  0.1    0.8      0.2      0.5\n",
+      "1214        --  0.9    0.9      0.8      0.9\n",
       "\n",
-      "[81 rows x 5 columns]\n"
+      "[1215 rows x 5 columns]\n"
      ]
     }
    ],
    "source": [
     "def search_eps_signs():\n",
-    "    gamma_values = [0.4, 0.8]\n",
+    "    gamma_values = [0.1, 0.2, 0.4, 0.5, 0.8, 0.9]\n",
     "#     gamma_values = [0.1, 0.2, 0.3, 0.7, 0.8, 0.9]\n",
     "    mu_values = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "    sigma_values = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'--': 75, '++': 3, '+-': 3})"
+       "Counter({'--': 982, '+-': 177, '++': 56})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,11 +97,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sign_pair</th>\n",
+       "      <th>mu</th>\n",
+       "      <th>sigma</th>\n",
+       "      <th>gamma_l</th>\n",
+       "      <th>gamma_h</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>229</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>230</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>+-</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>177 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sign_pair   mu  sigma  gamma_l  gamma_h\n",
+       "56         +-  0.7    0.3      0.1      0.8\n",
+       "57         +-  0.2    0.8      0.1      0.9\n",
+       "58         +-  0.7    0.2      0.1      0.8\n",
+       "59         +-  0.2    0.9      0.1      0.9\n",
+       "60         +-  0.7    0.1      0.1      0.8\n",
+       "..        ...  ...    ...      ...      ...\n",
+       "228        +-  0.4    0.2      0.1      0.5\n",
+       "229        +-  0.1    0.3      0.1      0.5\n",
+       "230        +-  0.2    0.1      0.1      0.2\n",
+       "231        +-  0.5    0.1      0.1      0.4\n",
+       "232        +-  0.3    0.2      0.1      0.5\n",
+       "\n",
+       "[177 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_result[df_result['sign_pair'] == '+-']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_result[df_result['sign_pair'] == '+-'].to_csv(\"tg_pm_instances.csv\", index=False, header=False)"
+    "cols = ['mu', 'sigma', 'gamma_l', 'gamma_h']\n",
+    "df_result[df_result['sign_pair'] == '+-'][cols].to_csv(\"tg_pm_instances_bigger.csv\", index=False, header=False)"
    ]
   },
   {
